<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Add_module" >

    <EditText
        android:id="@+id/addModCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="23"
        android:hint="@string/module_code" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/addModNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="23"
        android:hint="@string/module_name" />

    <TableLayout
        android:id="@+id/spinner_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/day_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day_of_week" />

            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/lecture_days" />
        </TableRow>

        <TableRow
            android:id="@+id/start_time_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time" />

            <Spinner
                android:id="@+id/timeStartSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/lecture_hours" />
        </TableRow>

        <TableRow
            android:id="@+id/finish_time_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finish_time" />

            <Spinner
                android:id="@+id/timeFinishedSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/lecture_hours"
                android:prompt="@string/finish_time" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/addRoomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="23"
        android:maxLines="1"
        android:hint="@string/location" />

    <EditText
        android:id="@+id/addCommEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_comments"
        android:maxLines="2"
        android:minLines="2"
        android:scrollbars="vertical" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/lectureRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_lecture" />

        <RadioButton
            android:id="@+id/practicalRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/radio_practical" />
    </RadioGroup>

    <Button
        android:id="@+id/insertButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="insertModule"
        android:text="@string/insert_button" />

</LinearLayout>
