<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/insertButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="addModule"
            android:text="@string/add_module_btn"
             />

    </TableRow>

	     <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2" >
	 
	    <ListView
	         android:id="@android:id/list"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="1">
	     </ListView>
	     </TableRow>

	     <TextView
	         android:id="@+id/textView1"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/theme_selections" />

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/lightTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setTheme"
            android:text="@string/light_theme" />

        <Button
            android:id="@+id/darkTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setTheme"
            android:text="@string/dark_theme" />

        <Button
            android:id="@+id/largeTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setTheme"
            android:text="@string/access_theme" />

    </TableRow>

</TableLayout>
