<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/full_widget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:background="@color/orange"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/text_borders" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/widget_title" />

        <TextView
            android:id="@+id/widgetModName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_start_time_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_borders" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/widgetStartTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wodget_location_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_borders" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/widget_label" />

        <TextView
            android:id="@+id/widgetLocation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>